--- a/public_html/index.html
+++ b/public_html/index.html
@@ -44,8 +44,8 @@
         <!-- Main jumbotron for a primary marketing message or call to action -->
         <div class="jumbotron">
             <div class="container">
-                <h1>Hola a Todos</h1>
-                <p>Me llamo Dahir Ruben Valenzuela Valenzuela y pertenezco a la carrera de ingenieria en software en ITSON esta es una pagina de entrada para que conozcan mas acerca de mi y las cosas que me gusta hacer y ver en mis ratos libres tambien les hablere un poco soble mi</p>
+                <h1>Hi everyone</h1>
+                <p>My name is Dahir Ruben Valenzuela Valenzuela and I belong to the software engineering career at ITSON this is an entry page for you to know more about me and the things I like to do and see in my spare time. </p>
             </div>
         </div>
 
@@ -53,18 +53,18 @@
             <!-- Example row of columns -->
             <div class="row">
                 <div class="col-md-4">
-                    <h2>Hobies</h2>
-                    <p>En mis ratos libres me gusta jugar a juegos como la Liga de Leyendas, Valorant o algun juego de accion como los DOOM, Call of Duty y otros mas, me gusta por lo general sacar todos los logros.</p>
+                    <h2>Hobbies</h2>
+                    <p>In my spare time I like to play games like League of Legends, Valorant or some action game like DOOM, Call of Duty and others, I usually like to get all the achievements.</p>
                 </div>
                 <div class="col-md-4">
-                    <h2>Series y Peliculas</h2>
-                    <p>Me gustan las pelicalas normales de supedasdawrheroes como las de marvel, y algunas peliculas de camara en mano como Cloverfield, por lo general las series que mas veo son de animacion como Castlevania de netflix aunque por lo general veo mucho anime de todo tipo.</p>
+                    <h2>Series and Movies</h2>
+                    <p>I like normal supedasdawrheroes movies like marvel's, and some handheld movies like Cloverfield, usually the series I watch the most are animated like Castlevania from Netflix, although I generally watch a lot of anime of all kinds.</p>
                 </div>
                 <div class="col-md-4">
-                    <h2>Contacto</h2>
-                    <p>Me puedes contactar por:</p>
-                    <p>Correo Personal:dahirvalenzuela@gmail.com</p>
-                    <p>Correo Institucional:dahir.valenzuela@potros.itson.edu.mx</p>
+                    <h2>Contact</h2>
+                    <p>You can contact me by:</p>
+                    <p>Personal E-mail:dahirvalenzuela@gmail.com</p>
+                    <p>Institutional E-mail:dahir.valenzuela@potros.itson.edu.mx</p>
                     <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
                 </div>
             </div>
